# auto-doc-generator

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: settings.py
src/core/: analyzer.py
src/llm_clients/: api_llm_client.py  base_llm_client.py  llm_client_factory.py  local_llm_client.py
src/parsers/: javascript_parser.py  parser_factory.py  python_parser.py
src/utils/: doc_insertion.py  llm_client.py  local_llm_client.py
tests/: test.py  test_doc_insertion.py  test_llm_client_factory.py  test_python_parser.py
