[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-generator-agent"
version = "0.1.0"
description = "AI-powered documentation generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    # Add other dependencies from your requirements.txt here
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "black",
    "flake8",
    # Add other dev dependencies
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true